--- a/COMP2006-S2016-FinalExamV2/Views/Albums/Browse.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Albums/Browse.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<!-- A list of ALbums that are on the database-->
 <h2>Browse Album</h2>
 <table class="table">
     <tr>
