--- a/COMP2006-S2016-FinalExamV2/Views/Artists/Browse.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Artists/Browse.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Browse";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<!-- A list of all Artist in the table-->
 <h2>Browse Artist</h2>
 <table class="table">
     <tr>
