--- a/COMP2006-S2016-FinalExamV2/Views/Genres/Browse.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Genres/Browse.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "View";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<!-- A list of Genres that are in the table-->
 <h2>Browse Genres</h2>
 <table class="table">
     <tr>
